[package]
name = "riscv-sim"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.4", default-features = false, features = ["cargo", "deprecated", "help", "std", "usage"] }
object = { version = "0.32", default-features = false, features = ["std", "read_core", "elf"] }
